# edgefriend-supplemental

./: .gitmodules  CMakeLists.txt  README.md
hlsl/: edgefriend.hlsl
include/: edgefriend.h
rapidobj/include/rapidobj/: rapidobj.hpp
src/: demo.cpp  edgefriend.cpp
